# Sats2Go

./: pyproject.toml
backend/: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
backend/app/handlers/: voucher.py
backend/app/lightning/: lnbits.py
backend/app/models/: status.py  voucher.py
backend/app/routers/: voucher.py  webhooks.py
backend/core/: config.py  session.py
frontend/: .env.example  package-lock.json  package.json  tailwind.config.js
frontend/src/components/: HowItWorks.tsx  cta.tsx  features.tsx  footer.tsx  header.tsx  hero.tsx  merchantdashboard.tsx  redeemvoucher.tsx  vouchercard.tsx
frontend/src/components/landing/: cta.tsx  features.tsx  footer.tsx  header.tsx  heror.tsx  how-tworks.tsx  problemSloving.tsx
frontend/src/components/merchant/: VoucherDisplay.tsx  VoucherForm.tsx  merchantdashboard.tsx
frontend/src/components/redeem/: RedeemInstructions.tsx  RedeemManualInput.tsx  RedeemResult.tsx  RedeemScanner.tsx  redeemvoucher.tsx
frontend/src/const/: landing.ts
frontend/src/interface/: merchant.ts
frontend/src/pages/: app.tsx  index.js  index.tsx  pagenotfound.tsx
frontend/src/styles/: globals.css
